--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<link rel="icon" type="image/svg+xml" href="/triangle-256.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="color-scheme" content="light dark" />
-		<title>Vite + Preact</title>
+		<title>In ⟁ Human Resources</title>
 	</head>
 	<body>
 		<div id="app"></div>
