feat: sentry and umami

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<meta name="color-scheme" content="light dark" />
 		<title>In ⟁ Human Resources</title>
+		<script defer src="https://cloud.umami.is/script.js" data-website-id="fd8e4a82-0c86-4d35-9f36-5bf56e5123a7"></script>
 	</head>
 	<body>
 		<div id="app"></div>
